--- a/style.css
+++ b/style.css
@@ -39,7 +39,8 @@ body {
   background-position: center;
   background-size: cover; */
   /* with shorthand */
-  background: var(--bg-url) no-repeat top center/cover; }
+  background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh; }
 
 body * {
   color: var(--text-color-hover);
@@ -161,4 +162,16 @@ footer {
 
 footer a {
   text-decoration: underline;
+}
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(assets/bg-desktop-light.jpg);
+  }
+
 }
