--- a/style.css
+++ b/style.css
@@ -87,13 +87,17 @@ body * {
   left: 0;
 
   cursor: pointer;
+
+  animation: slide-back 0.5s;
 }
 
 .light #switch button {
-  left: initial;
-  right: 0;
+animation: slide-in 0.4s forwards; /*forwards - qnd terminar as propriedades do slide-in, mantenha as propriedades*/
 
+}
 
+#switch button:hover {
+outline: 8px solid var(--bglink-color);
 
 }
 #switch span {
@@ -174,4 +178,23 @@ footer a {
     --bg-url: url(assets/bg-desktop-light.jpg);
   }
 
+}
+
+/* animation */
+@keyframes slide-in{
+  from {
+    left: 0;
+  }
+  to {
+    left:50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left:50%;
+  }
+  to {
+    left:0;
+  }
 }
